[package]
name = "penrose-sminez"
version = "0.1.0"
authors = ["IDAM <innes.andersonmorrison@gmail.com>"]
edition = "2018"

[[bin]]
doc = false
name = "penrose"
path = "src/main.rs"

[[bin]]
doc = false
name = "pmenu"
path = "src/pmenu/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
penrose = { path = "/home/innes/repos/personal/penrose", features = [ "xcb", "xcb_draw", "keysyms", "serde" ] }
penrose_menu = { path = "/home/innes/repos/personal/penrose/crates/penrose_menu" }
tracing = "0.1"
tracing-subscriber = "0.2"
