[package]
name = "penrose-sminez"
version = "0.2.0"
authors = ["IDAM <innes.andersonmorrison@gmail.com>"]
edition = "2021"

[[bin]]
doc = false
name = "penrose"
path = "src/main.rs"

[[bin]]
doc = false
name = "pctl"
path = "src/pctl.rs"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive", "unicode"] }
penrose = { path = "/home/innes/repos/personal/penrose" }
penrose_ui = { path = "/home/innes/repos/personal/penrose/crates/penrose_ui" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
